tests/fixtures/invalid/pow_bytes_str_none.py
# Cannot call pow() with Bytes, Str, None
x = pow(b"hello", "hello", None)
